add workspace.xml to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
 .DS_Store
 algebraic-place-notation/algebraic-place-notation.pdf
 algebraic-place-notation/code/__pycache__
+algebraic-place-notation/.idea/workspace.xml
