Add surprise royal study doc

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,4 @@
 algebraic-place-notation/algebraic-place-notation.pdf
 algebraic-place-notation/code/__pycache__
 algebraic-place-notation/.idea/workspace.xml
+ringing notes/surprise-royal.pdf
